// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditableDraggableTable /> renders correctly 1`] = `
<EditableDraggableTable
  columns={
    Array [
      Object {
        "header": Object {
          "label": "One",
        },
        "property": "one",
      },
      Object {
        "header": Object {
          "label": "Two",
        },
        "property": "two",
      },
    ]
  }
  onChange={[MockFunction]}
  rows={Array []}
/>
`;

exports[`<EditableDraggableTable /> renders data correctly 1`] = `
<EditableDraggableTable
  columns={
    Array [
      Object {
        "header": Object {
          "label": "One",
        },
        "property": "one",
      },
      Object {
        "header": Object {
          "label": "Two",
        },
        "property": "two",
      },
    ]
  }
  onChange={[MockFunction]}
  rows={
    Array [
      Object {
        "id": 1,
        "one": "Cell 1-one",
        "two": "Cell 1-two",
      },
      Object {
        "id": 2,
        "one": "Cell 2-one",
        "two": "Cell 2-two",
      },
    ]
  }
/>
`;
